# BOOM

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
backend/: pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/communication/: __init__.py  command_handler.py  serial_manager.py  websocket_manager.py
backend/src/processing/: __init__.py  data_logger.py  event_detector.py
backend/src/simulator/: __init__.py  brunito_simulator.py
backend/src/telemetry/: __init__.py  event_detector.py  integrated_processor.py  kalman_filter.py  protocol.py  validation.py
docs/: BOOM_ARCHITECTURE.md  BOOM_IMPLEMENTATION.md  NEW_TRAJECTORY.md  TELEMETRY_PROTOCOL.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/3D/: LeafletTextureGenerator.tsx  RocketOrientation.css  RocketOrientation.tsx  Trajectory.tsx
src/components/Charts/: AccelerationChart.tsx  AccelerationChartFixed.tsx  AltitudeChart.tsx  Charts.css  GyroscopeChart.tsx  MagnetometerChart.tsx  UnifiedChart.tsx
src/components/Command/: CommandPanel.css  CommandPanel.tsx
src/components/Controls/: SerialPortControls.css  SerialPortControls.tsx  index.ts
src/components/Dashboard/: Dashboard.tsx  Flex3DDisplay.tsx  FlexChartDisplay.tsx  FlexCommandPanel.tsx  FlexControlsPanel.tsx  FlexMapDisplay.tsx  FlexSimulationPanel.tsx  FlexTelemetryDisplay.tsx  (+1 more)
src/services/: serial-port-api.ts  websocket-client.ts
src/stores/: telemetry-store.ts
src/types/: telemetry.ts
(+7 files in other folders)
